force-app/main/default/objects/NCMT_CEW_Work_Item__c/NCMT_CEW_Work_Item__c.object-meta.xml
<CustomObject>
    <label>CEW Work Item</label>
    <nameField>
        <displayFormat>CWI-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CEW Work Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>