force-app/main/default/objects/NCMT_CEW_Work_Item__c/fields/CEW_Project_Agency__c.field-meta.xml
<CustomField>
    <fullName>CEW_Project_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CEW Project Agency</label>
    <referenceTo>NCMT_CEW_Project_Agency__c</referenceTo>
    <relationshipLabel>CEW Work Items</relationshipLabel>
    <relationshipName>CEW_Work_Items</relationshipName>
    <type>Lookup</type>
</CustomField>