force-app/main/default/objects/NCMT_CEW_Work_Item__c/fields/NCMT_CEW_Work_Description__c.field-meta.xml
<CustomField>
    <fullName>NCMT_CEW_Work_Description__c</fullName>
    <label>CEW Work Description</label>
    <referenceTo>NCMT_Work_Description__c</referenceTo>
    <relationshipLabel>CEW Work Items</relationshipLabel>
    <relationshipName>CEW_Work_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>