force-app/main/default/objects/NCMT_CEW_Work_Item__c/fields/Project_Cost_Summary__c.field-meta.xml
<CustomField>
    <fullName>Project_Cost_Summary__c</fullName>
    <label>Project Cost Summary</label>
    <referenceTo>NCMT_Project_Cost_Summary__c</referenceTo>
    <relationshipLabel>CEW Work Items</relationshipLabel>
    <relationshipName>CEW_Work_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>