force-app/main/default/objects/NCMT_CEW_Work_Item__c/fields/SQ_Ft__c.field-meta.xml
<CustomField>
    <fullName>SQ_Ft__c</fullName>
    <label>SQ Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>