force-app/main/default/objects/NCMT_CEW_Work_Item__c/fields/Uniformat_Code__c.field-meta.xml
<CustomField>
    <fullName>Uniformat_Code__c</fullName>
    <formula>Project_Cost_Summary__r.Cost_Category_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Uniformat Code</label>
    <type>Text</type>
</CustomField>