force-app/main/default/objects/NCMT_CEW_Work_Item__c/fields/Work_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Code__c</fullName>
    <label>Work Item Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>