force-app/main/default/objects/NCMT_CEW_Work_Item__c/validationRules/If_wicode_is_6_7_8_ABcode_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>If_wicode_is_6_7_8_ABcode_not_null</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR( 
WorkDescNumber__c =6,
WorkDescNumber__c =7,
WorkDescNumber__c =8
),
 ISBLANK( CEW_Project_Agency__c ) 
)</errorConditionFormula>
    <errorDisplayField>CEW_Project_Agency__c</errorDisplayField>
    <errorMessage>AB Code required for Work Codes 6 7 8</errorMessage>
</ValidationRule>